// Vitest Snapshot v1

exports[`constructShape > should group data by name and omit name 1`] = `
{
  "gatsby-starter-minimal-blog": [
    {
      "datetime": "2020-07-17",
      "forks": 154,
      "stars": 517,
      "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
    },
    {
      "datetime": "2020-07-18",
      "forks": 153,
      "stars": 517,
      "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
    },
  ],
  "gatsby-starter-portfolio-bella": [
    {
      "datetime": "2020-07-17",
      "forks": 19,
      "stars": 113,
      "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
    },
    {
      "datetime": "2020-07-18",
      "forks": 18,
      "stars": 113,
      "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
    },
  ],
  "gatsby-themes": [
    {
      "datetime": "2020-07-17",
      "forks": 243,
      "stars": 745,
      "url": "https://github.com/LekoArts/gatsby-themes",
    },
    {
      "datetime": "2020-07-18",
      "forks": 245,
      "stars": 749,
      "url": "https://github.com/LekoArts/gatsby-themes",
    },
  ],
}
`;

exports[`flatten > should create new object shape 1`] = `
[
  {
    "datetime": "2020-07-17",
    "forks": 243,
    "name": "gatsby-themes",
    "stars": 745,
    "url": "https://github.com/LekoArts/gatsby-themes",
  },
  {
    "datetime": "2020-07-17",
    "forks": 154,
    "name": "gatsby-starter-minimal-blog",
    "stars": 517,
    "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
  },
  {
    "datetime": "2020-07-17",
    "forks": 19,
    "name": "gatsby-starter-portfolio-bella",
    "stars": 113,
    "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
  },
  {
    "datetime": "2020-07-18",
    "forks": 245,
    "name": "gatsby-themes",
    "stars": 749,
    "url": "https://github.com/LekoArts/gatsby-themes",
  },
  {
    "datetime": "2020-07-18",
    "forks": 153,
    "name": "gatsby-starter-minimal-blog",
    "stars": 517,
    "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
  },
  {
    "datetime": "2020-07-18",
    "forks": 18,
    "name": "gatsby-starter-portfolio-bella",
    "stars": 113,
    "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
  },
]
`;

exports[`nivoGithubFormatter > should output correct shape via input 1`] = `
[
  {
    "data": [
      {
        "x": "2020-07-17",
        "y": 113,
      },
      {
        "x": "2020-07-18",
        "y": 113,
      },
    ],
    "id": "gatsby-starter-portfolio-bella",
  },
  {
    "data": [
      {
        "x": "2020-07-17",
        "y": 517,
      },
      {
        "x": "2020-07-18",
        "y": 517,
      },
    ],
    "id": "gatsby-starter-minimal-blog",
  },
  {
    "data": [
      {
        "x": "2020-07-17",
        "y": 745,
      },
      {
        "x": "2020-07-18",
        "y": 749,
      },
    ],
    "id": "gatsby-themes",
  },
]
`;

exports[`nivoTwitterFormatter > should output correct shape via input 1`] = `
[
  {
    "data": [
      {
        "x": "2020-07-16",
        "y": 1126,
      },
      {
        "x": "2020-07-17",
        "y": 1137,
      },
      {
        "x": "2020-07-18",
        "y": 1150,
      },
    ],
    "id": "followers",
  },
]
`;
